<resources>
    <string name="app_name">Age Calculator</string>
    <string name="calculate_your">CALCULATE YOUR</string>
    <string name="age">AGE</string>
    <string name="in_minutes">IN MINUTES</string>
    <string name="select_date">SELECT DATE</string>
    <string name="selected_date">Selected Date</string>
    <string name="age_in_minutes">Age in Minutes</string>
    <string name="age_in_seconds">Age in Seconds</string>
    <string name="age_in_hours">Age in Hours</string>
    <string name="age_in_days">Age in Days</string>
</resources>