<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:padding="16dp"
    android:orientation="vertical"
    android:background="@color/background"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:gravity="center_horizontal"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/calculate_your"
        android:textColor="@color/textColor"
        android:textSize="20sp"
        android:padding="8dp"
        android:textStyle="bold"
        android:background="@color/primary" />

    <TextView
        android:layout_width="match_parent"
        android:gravity="center_horizontal"
        android:layout_height="wrap_content"
        android:background="@color/ageBackground"
        android:padding="8dp"
        android:text="@string/age"
        android:textColor="#0277BD"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvSelectedDateInSeconds"
        android:textColor="#844046"
        android:layout_marginTop="20sp"
        android:textSize="30sp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/age_in_seconds"
        android:textColor="#546E7A"
        android:textSize="18sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvSelectedDateInMinutes"
        android:textColor="#844046"
        android:layout_marginTop="20sp"
        android:textSize="30sp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/age_in_minutes"
        android:textColor="#546E7A"
        android:textSize="18sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvSelectedDateInHours"
        android:textColor="#844046"
        android:layout_marginTop="20sp"
        android:textSize="30sp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/age_in_hours"
        android:textColor="#546E7A"
        android:textSize="18sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvSelectedDateInDays"
        android:textColor="#844046"
        android:layout_marginTop="20sp"
        android:textSize="30sp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/age_in_days"
        android:textColor="#546E7A"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/tvSelectedDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#844046"
        android:layout_marginTop="35sp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:background="@color/ageBackground"
        android:padding="8dp"
        />

    <Button
        android:id="@+id/btnDatePicker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@color/background"
        android:text="@string/select_date"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold" />
</LinearLayout>